--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.autocare">
+    package="com.example.autocare" >
 
     <application
         android:allowBackup="true"
@@ -8,11 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AutoCare">
+        android:theme="@style/Theme.AutoCare" >
+        <activity
+            android:name=".ServiceSearch"
+            android:exported="true" />
         <activity
             android:name=".UpdateService"
             android:exported="true" />
-      <activity
+        <activity
             android:name=".UpdateActivity"
             android:exported="true" />
         <activity
@@ -41,7 +44,6 @@
             android:exported="true" />
         <activity
             android:name=".AddService"
-
             android:exported="true" />
         <activity
             android:name=".Deletereminders"
@@ -72,7 +74,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
