--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AutoCare">
         <activity
+            android:name=".AboutUs"
+            android:exported="true" />
+        <activity
             android:name=".UpdateService"
             android:exported="true" />
-      <activity
+        <activity
             android:name=".UpdateActivity"
             android:exported="true" />
         <activity
@@ -41,7 +44,6 @@
             android:exported="true" />
         <activity
             android:name=".AddService"
-
             android:exported="true" />
         <activity
             android:name=".Deletereminders"
