--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AutoCare">
+		<activity
+            android:name=".ServiceSearch"
+            android:exported="true" />
         <activity
             android:name=".AboutUs"
             android:exported="true" />
